--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -30,7 +30,8 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button class="btn btn-success btn-block" type="submit"form="editForm" [disabled]="!editForm.dirty">Save Changes</button>
+                <button class="btn btn-success btn-block" type="submit" form="editForm"
+                    [disabled]="!editForm.dirty">Save Changes</button>
             </div>
         </div>
     </div>
@@ -39,9 +40,11 @@
             <tab heading="About {{member.knownAs}}">
                 <form #editForm="ngForm" (ngSubmit)="updateMember()" id="editForm">
                     <h4>Description</h4>
-                    <textarea name="introduction" rows="6" [(ngModel)]="member.introduction" class="form-control"></textarea>
+                    <textarea name="introduction" rows="6" [(ngModel)]="member.introduction"
+                        class="form-control"></textarea>
                     <h4 class="mt-2">Looking For</h4>
-                    <textarea name="lookingFor" rows="6" [(ngModel)]="member.lookingFor" class="form-control"></textarea>
+                    <textarea name="lookingFor" rows="6" [(ngModel)]="member.lookingFor"
+                        class="form-control"></textarea>
                     <h4 class="mt-2">Interests</h4>
                     <textarea name="interests" rows="6" [(ngModel)]="member.interests" class="form-control"></textarea>
                     <h4 class="mt-2">Location Details: </h4>
@@ -54,7 +57,7 @@
                 </form>
             </tab>
             <tab heading="Edit Photos">
-                <h4>Adding photos here</h4>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
