--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,16 +1,36 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.value && register()" autocomplete="off">
   <h2 class="text-center text-primary">Sing up</h2>
   <hr>
   <div class="form-group">
-    <input type="text" class="form-control mb-2" name="username" [(ngModel)]="model.username" placeholder="Username">
+    <label class="control-label" style="margin-right: 10px;">I am a:</label>
+    <label class="radio-inline">
+      <input type="radio" formControlName="gender" value="male"> Male
+    </label>
+    <label class="radio-inline">
+      <input type="radio" formControlName="gender" value="female" class="ml-3"> Female
+    </label>
   </div>
+  <app-text-input [formControl]='registerForm.controls["username"]' [label]='"Username"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["knownAs"]' [label]='"Known As"'></app-text-input>
+  <app-date-input [formControl]='registerForm.controls["dateOfBirth"]' [label]='"Date Of Birth"' [maxDate]="maxDate">
+  </app-date-input>
+  <app-text-input [formControl]='registerForm.controls["city"]' [label]='"City"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["country"]' [label]='"Country"'></app-text-input>
+  <app-text-input [formControl]='registerForm.controls["password"]' [label]='"Password"' [type]="'password'">
+  </app-text-input>
+  <app-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Confirm Password"'
+    [type]="'password'"></app-text-input>
 
-  <div class="form-group">
-    <input type="password" class="form-control mb-2" name="password" [(ngModel)]="model.password" placeholder="Password">
-  </div>
+    <div class="row" *ngIf="validationErrors.length > 0">
+      <ul class="text-danger">
+        <li *ngFor="let error of validationErrors">
+          {{error}}
+        </li>
+      </ul>
+    </div>
 
   <div class="from-group text-center">
-    <button class="btn btn-success mr-2" type="submit">Register</button>
+    <button class="btn btn-success mr-2" type="submit" [disabled]="!registerForm.valid">Register</button>
     <button class="btn btn-default mr-2" type="button" (click)="cancel()">Cancel</button>
   </div>
 </form>
