--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,48 @@
+<div class="text-center mt-3">
+    <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+</div>
+
+<div class="container mt-3">
+    <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="form-group">
+            <label>Age From: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge"
+                [(ngModel)]="userParams.minAge">
+        </div>
+        <div class="form-group px-2">
+            <label>Age To: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge"
+                [(ngModel)]="userParams.maxAge">
+        </div>
+        <div class="form-group px-2">
+            <label>Show: </label>
+            <select name="gender" style="width: 130px;" class="form-control ml-1" [(ngModel)]="userParams.gender">
+                <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+            </select>
+        </div>
+
+        <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
+        <button (click)="resetFilters()" class="btn btn-primary ml-1" >Reset Filters</button>
+
+        <div class="col">
+            <div class="btn-group float-right">
+                <button type="button" class="btn btn-primary" btnRadio="lastActive" name="orderBy" [(ngModel)]="userParams.orderBy" (click)="loadMembers()">Last Active</button>
+                <button type="button" class="btn btn-primary" btnRadio="created" name="orderBy" [(ngModel)]="userParams.orderBy" (click)="loadMembers()">Newest Members</button>
+            </div>
+        </div>
+
+    </form>
+</div>
+
 <div class="row">
-    <div class="col-2" *ngFor="let member of members$ | async">
+    <div class="col-2" *ngFor="let member of members">
         <app-member-card [member]="member"></app-member-card>
     </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" (pageChanged)="pageChanged($event)" [(ngModel)]="pagination.currentPage"
+        [itemsPerPage]="pagination.itemsPerPage" [totalItems]="pagination.totalItems" previousText="&lsaquo;"
+        nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+    </pagination>
 </div>
