--- a/client/src/app/member-messages/member-messages.component.html
+++ b/client/src/app/member-messages/member-messages.component.html
@@ -1,11 +1,12 @@
 <div class="card">
     <div class="card-body">
-        <div *ngIf="messages?.length === 0">
+        <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet... say hi by using the message box below
         </div>
 
-        <ul class="chat" *ngIf="messages?.length > 0">
-            <li *ngFor="let message of messages">
+        <ul #scrollMe style="overflow: scroll; height: 500px;" class="chat" [scrollTop]="scrollMe.scrollHight"
+            *ngIf="(messageService.messageThread$ | async)?.length > 0">
+            <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-right">
                         <img src="{{message.senderPhotoUrl || './assets/user.png'}}" alt="{{message.senderUsername}}"
@@ -34,7 +35,8 @@
 
     <div class="card-footer">
         <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
-            <input name="messageContent" [(ngModel)]="messageContent" required type="text" class="form-control input-sm" placeholder="Send a private message">
+            <input name="messageContent" [(ngModel)]="messageContent" required type="text" class="form-control input-sm"
+                placeholder="Send a private message">
             <div class="input-group-append">
                 <button class="btn btn-primary" type="submit" [disabled]="!messageForm.valid">Send</button>
             </div>
